--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,8 +6,8 @@
 # Appearance
 
 appearance:
-  theme_day: minimal
-  theme_night: minimal
+  theme_day: emory
+  theme_night: emory
   font: minimal
   font_size: L
 
@@ -63,8 +63,8 @@ locale:
 
 features:
   syntax_highlighter:
-    theme_light: emory
-    theme_dark: emory
+    theme_light: github-light
+    theme_dark: dracula
   math:
     enable: false
   privacy_pack:
